# nanoAgent

./: .env  agent-claudecode-commented.py  agent-claudecode-extantion.py  agent.py  project_overview.html  test.ipynb
agent/: .env  LICENSE  __init__.py  agent_memory.md  main.py  requirements.txt
agent/core/: __init__.py  agent.py  config.py  exceptions.py  executor.py  llm.py
agent/loaders/: __init__.py  mcp.py  rules.py  skills_loader.py
agent/mcp/: __init__.py  mcp_client.py
agent/memory/: __init__.py  manager.py
agent/tools/: __init__.py  command.py  definitions.py  filesystem.py  interaction.py  multi_edit.py  planning.py  search.py  todo.py
agent/ui/: __init__.py  app.py  repl.py
codeagent/: .cli_history  .env  .env.example  README.md  __init__.py  __main__.py  agent_memory.md  main.py  pyproject.toml  requirements.txt
codeagent/agent/: __init__.py  code_agent.py
codeagent/context/: __init__.py  history.py  memory.py  rules.py  skills.py  truncation.py
codeagent/core/: __init__.py  config.py  llm.py  message.py
codeagent/tools/: __init__.py  definitions.py  functions.py  mcp_loader.py
codeagent/utils/: __init__.py  cli.py  display.py
docs/: PROJECT_ANALYSIS.md  README_CN.md  agent_memory.md  reference1.md  todo.md  项目阅读与拓展开发报告.md
tests/: test.ipynb  test_agent_commented.py  test_integration.py
variants/: agent-claudecode.py  agent-plus-commented.py  agent-plus.py
